фулл 5 6 7 , если нет ... то окей ... я виноват(